src/components/Racetrack/Facet.scss
@import '../../styles/core-mixins.scss';

.Facet {
  .WidgetHeader {
    color: $zorroa-nearwhite;
  }

  .WidgetHeader-icon {
    transform: rotate(-90deg) scaleY(-1);
  }

  .Widget-icon {
    font-size: 20px;
  }

  .Facet-header {
    @include flexRow;
    @include flexJustifySpaceBetween;
    @include flexAlignItemsCenter;
    @include fullWidth;
    @include noSelect;

    flex-shrink: 1;
  }

  .Facet-header-label {
    @include flexRow;
    @include flexAlignItemsCenter;
  }

  .Facet-header-title {
    font-weight: 100;
    margin-right: 4px;
  }

  .Facet-header-field {
    font-weight: 400;
  }

  .Facet-settings {
    @include zorroa-square-btn-darken(40px);
  }

  .Facet-body {
    padding: 10px;
  }

  .Facet-sort {
    table {}
  }

  .Facet-clear-selection {
    @include flexRowCenter;
    font-size: 13px;
    color: $zorroa-lightgray;
    height: 14px;
    margin-top: 14px;
    margin-bottom: 14px;
  }

  .Facet-clear-selection-cancel {
    @include flexRowCenter;
    &:hover { background-color: $zorroa-lightgray; color: white; }
    width: 18px;
    height: 18px;
    border-radius: 3px;
    margin-left: 2px;
    font-size: 10px;
  }

  .Facet-value-range {
    flex: 1;
  }

  .Facet-value-table {
    @include flexOn;
    width: 100%;
    max-width: 100%;
    max-height: 300px;
    border-bottom: 1px solid #aaa;
    border-spacing: 0;
    padding: 2px 0 2px 2px;
    overflow: hidden;
    overflow-y: auto;

    .Facet-value-table-row:nth-child(odd) {
      background-color: $zorroa-nearwhite;
    }

    .Facet-value-table-row {
      user-select: none;
      color: $zorroa-greyish-brown;
      &:hover { background-color: $zorroa-hover; }
      &.selected { background-color: $zorroa-selected; }
      &.selected:hover { background-color: $zorroa-hover; }
    }

    .Facet-value-table-key {
      @include fullHeight;
      @include fullWidth;
      position: relative;
      padding: 8px;
    }

    .Facet-value-pct-bar {
      position: absolute;
      top: 0;
      left: 0;
      height: 100%;
      background-color: rgba(161, 29, 119, 0.2);
    }

    .Facet-value-key {
      position: relative;
    }
  }

  .Facet-pie-chart {
    @include flexOn;
    @include fullWidth;
    height: 240px;
    max-height: 240px;

    .Facet-pie-pct {
      font-size: 9px;
      fill: white;
      @include noSelect;
      pointer-events: none;
    }

    .Facet-pie-label {
      font-size: 10px;
      fill: $zorroa-lightgray;
      font-stretch: condensed;

      &.active {
        fill: $zorroa-water-blue;
        font-weight: 900;
        font-size: 11px;
      }
    }

  }

  // Custom scrollbar styles from Amber
  ::-webkit-scrollbar {
    width: 5px;
  }

  table {
    width: 100%;
    border: 0;
    border-spacing: 0;
    padding-right: 10px;
  }

  td:last-child {
    text-align: right;
    width: 60px;
  }

  .Facet-value-cell {
    padding: 0;
    max-width: 0; // This looks weird, but is important! It allows cells to chop content
    @include clampText;
  }

  .Facet-value-count {
    padding: 0;
    max-width: 0; // This looks weird, but is important! It allows cells to chop content
    @include clampText;
  }

  .Facet-table-header {
    @include flexRow;
    @include flexAlignItemsCenter;
    @include flexJustifySpaceBetween;
    margin-bottom: 6px;
    margin-left: 10px;
    margin-right: 4px;
  }

  .Facet-table-header-cell {
    @include flexRow;
    @include flexAlignItemsCenter;
    line-height: 1;
  }

  .Facet-table-header-cell:last-child {
    text-align: right;
    width: 60px;
  }

  .Facet-table-header-title {
    font-size: 12px;
    text-transform: uppercase;
    color: $zorroa-gray;
    background-color: white;
    text-align: left;
    font-family: "Roboto Condensed";
    font-weight: 300;
  }

  .Facet-table-header-count {
    @include flexRowCenter;

    width: 14px;
    font-size: 10px;
    color: $zorroa-lightgray;
    padding-left: 4px;
    padding-top: 4px;
    padding-bottom: 4px;
    padding-right: 5px;
    margin-left: 2px;
    border-radius: 3px;
    &:hover {
      color: white;
      background-color: $zorroa-sickly-green;
    }
  }

  .Facet-controls {
    color: $zorroa-gray;
  }

  .Facet-footer {
    border-top: 1px solid $zorroa-nearwhite;
    padding-top: 4px;
    padding-bottom: 4px;

    .Facet-icon {
      width: 30px;
      height: 30px;
      border: none;
      outline: none;
      font-size: 16px;
      border-radius: 3px;
      margin: 4px;
      counter-reset: $zorroa-greyish-brown;
      background: transparent;
      cursor: pointer;

      &:hover {
        background-color: rgba(161, 29, 119, 0.1);
      }

      &.selected {
        color: white;
        background-color: #a11d77;  // ack! Should by dynamically set
      }
    }
  }

  .rotN90Flip {
    transform: rotate(-90deg) scaleY(-1);
  }
}

